[FIX][UX] Fix bad contrast in wiki page "set page translation" dropdown header. Thanks, Chealer.

--- a/themes/fivealive/less/bootstrap-variables.less
+++ b/themes/fivealive/less/bootstrap-variables.less
@@ -253,13 +253,13 @@
 @dropdown-link-active-bg: @component-active-bg;
 
 //** Disabled dropdown menu item background color.
-@dropdown-link-disabled-color: @gray-light;
+@dropdown-link-disabled-color: @gray-lighter;
 
 //** Text color for headers within dropdown menus.
-@dropdown-header-color: @gray-light;
+@dropdown-header-color: #fff;
 
 //** Deprecated `@dropdown-caret-color` as of v3.1.0
-@dropdown-caret-color: #000000;
+@dropdown-caret-color: @link-color;
 
 //-- Z-index master list
 //
